Add link to 'add.html' from 'index.html'
Employs 'url_for', which references the view function, 'add', from
'thermos.py'.

--- a/thermos/templates/index.html
+++ b/thermos/templates/index.html
@@ -19,7 +19,7 @@
                 <h1 class="title">Thermos</h1>
                 <nav>
                     <ul>
-                        <li><a href="#">Add URL</a></li>
+                        <li><a href="{{ url_for('add') }}">Add URL</a></li>
                         <li><a href="#">Sign up</a></li>
                         <li><a href="#">Sign in</a></li>
                     </ul>
