--- a/thermos/templates/add.html
+++ b/thermos/templates/add.html
@@ -1,18 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Add a new bookmark</title>
-    </head>
-    <body>
-        <form action="" method="post">
-            <p>
-                Please enter your bookmark here:
-                <input type="text" name="url">
-            </p>
-            <p>
-                <button type="submit">Submit</button>
-            </p>
-        </form>
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}
+Thermos | Add a URL
+{% endblock %}
+
+{% block content %}
+    <section>
+        <h1>Add a new URL</h1>
+            <form action="" method="post">
+                <p>
+                    Please enter your bookmark here:
+                    <input type="text" name="url">
+                </p>
+                <p>
+                    <button type="submit">Submit</button>
+                </p>
+            </form>
+    </section>
+{% endblock %}
+
+{% block sidebar %}
+{% endblock %}
