Re-style 'Thermos' title
Always white, no underline.

--- a/thermos/templates/base.html
+++ b/thermos/templates/base.html
@@ -16,7 +16,7 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title"><a href="{{ url_for('index') }}">Thermos</a></h1>
+                <h1 class="title"><a href="{{ url_for('index') }}" id="site_title">Thermos</a></h1>
                 <nav>
                     <ul>
                         <li><a href="{{ url_for('add') }}">Add URL</a></li>
