--- a/thermos/static/css/main.css
+++ b/thermos/static/css/main.css
@@ -179,10 +179,18 @@ footer h3 {
     text-decoration: none;
 }
 
+.flashes ul {
+    margin: 0 0;
+    background: #FFD6A3;
+    color: #000;
 
+    list-style-type: none;
+    list-style: none;
+}
 
-
-
+article.flashes {
+    margin-bottom: 1em;
+}
 
 /* ==========================================================================
    Media Queries
