--- a/thermos/templates/index.html
+++ b/thermos/templates/index.html
@@ -11,9 +11,17 @@ Thermos | Welcome
             <p>Thermos is a simple social bookmarking site. Or actually, it is a demo for the <a href="https://www.pluralsight.com">PluralSight</a> course titled <em>Flask Fundamentals</em>.</p>
         </header>
         <section>
-            <h2>article section h2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
+            <h2>Recently Added</h2>
+            {% if new_bookmarks %}
+                <ul>
+                    {% for bm in new_bookmarks %}
+                        <li>{{ bm.user }} added <a href="{{ bm.url }}">{{ bm.url }}</a></li>
+                </ul>
+            {% else %}
+                No bookmarks yet.
+            {% endif %}
         </section>
+        
         <section>
             <h2>article section h2</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
